minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__aggregate_function_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Count
- start: 0
  end: 8
