minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__list_value_constructor_2.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- type_name:
    - List
    - start: 0
      end: 4
  values: []
- start: 0
  end: 7
