minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__set_quantifier_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Distinct
- start: 0
  end: 8
